# LongestColorSequenceComplete

./: CMakeLists.txt  README.md  run.sh  valgrind_test.sh
cmake_helpers/: helpers_c.cmake
lcs/lib/: Defines.h  Vector.h  helpers.h  runDFS.h
lcs/src/: Vector.c  helpers.c  main.c  runDFS.c
lcs_module/: demo.py  install_py_module.sh
lcs_module/src/: lcsModule.c  setup.py
lcs_py_ext_lib/: CMakeLists.txt  main.py
tests/: read_test.py  run_test.py  setting.py
